--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,17 +74,6 @@ jobs:
         with:
           tagName: ${{ github.ref_name }}
           releaseName: 'Better Terminal ${{ github.ref_name }}'
-          releaseBody: |
-            ## Better Terminal ${{ github.ref_name }}
-
-            ### Downloads
-            - **macOS (Apple Silicon)**: `.dmg` file for M1/M2/M3/M4 Macs
-            - **macOS (Intel)**: `.dmg` file for Intel Macs
-            - **Windows**: `.msi` installer
-            - **Linux**: `.deb` package and `.AppImage`
-
-            ### What's New
-            See [CHANGELOG](https://github.com/${{ github.repository }}/commits/${{ github.ref_name }}) for details.
-          releaseDraft: true
+          releaseDraft: false
           prerelease: false
           args: --target ${{ matrix.target }}
